--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -1,17 +1,18 @@
-@use '../styles/partials/variables' as *;
-@use '../styles/partials/mixins' as *;
+@use "../styles/partials/variables" as *;
+@use "../styles/partials/mixins" as *;
 
 * {
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    width: 80%;
+  width: 80%;
+  margin: 0 auto;
 }
 
 ul {
-    list-style: none;
-    @include align('default');
+  list-style: none;
+  @include align("default");
 }
